
- Fixed a bug that could cause Visual Studio to hang while opening or
  building solutions containing a large number of projects.

- Fixed a bug during project cleaning in which an exception was thrown
  when trying to remove generated files and the user is not authorized
  to remove the files.  

- Fixed a bug with solutions that contain unloaded projects. 


C# Changes
==========

- Fixed a bug that could cause an infinite loop while visiting all
  referenced assemblies of an executable.

- The generated constructors for an abstract Slice class now use
  protected visibility instead of public visibility.

- Fixed a bug in Ice.Application for Mono that could cause the VM to
  crash when a signal occurred.

- Minor marshaling/un-marshaling performance improvement (removed
  virtual specifier from streaming class).

- Added missing throwLocalException method to Ice.AsyncResult
  interface.

- Struct types that contains default values are mapped to a class.


Java Changes
============

- Fixed a bug in the generated code for a Slice exception with no
  data members: constructors are now generated correctly.

- Fixed an IceSSL bug in which the IceSSL.Alias property was not
  working correctly.

- The mapping for Slice classes and structures now defines a
  serialVersionUID member. You can override the default UID using the
  metadata [java:serialVersionUID:<value>].

- Ice services are now built in separate JAR files.


Python Changes
==============

- Added support for Python 3.

- Fixed a bug in the checkedCast operation when using a non-existent
  facet. In previous releases this operation raised a
  FacetNotExistException; now it returns a nil proxy as in other
  language mappings.

- Fixed a bug that caused IceGrid activation of a Python server to
  hang when tracing was enabled for the server.


PHP Changes
===========

- Added compatibility with PHP 5.4.

- Fixed a bug in the checkedCast operation when using a non-existent